# triple-hybrid-rag

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
audio_assets/: README.md  greetings.raw
audio_assets/silence_fillings/: cartesia_audio_2025-10-06T15_26_13-03_00.raw  cartesia_audio_2025-10-06T15_27_42-03_00.raw  cartesia_audio_2025-10-06T15_28_00-03_00.raw  cartesia_audio_2025-10-06T15_28_29-03_00.raw  cartesia_audio_2025-10-06T15_31_50-03_00.raw  cartesia_audio_2025-10-06T15_32_04-03_00.raw  cartesia_audio_2025-10-06T15_33_40-03_00.raw  cartesia_audio_2025-10-06T15_33_49-03_00.raw  cartesia_audio_2025-10-06T15_34_01-03_00.raw  cartesia_audio_2025-10-06T15_34_21-03_00.raw  cartesia_audio_2025-10-06T15_34_26-03_00.raw  cartesia_audio_2025-10-06T15_34_45-03_00.raw  cartesia_audio_2025-10-06T15_34_55-03_00.raw  cartesia_audio_2025-10-06T15_35_13-03_00.raw  cartesia_audio_2025-10-06T15_35_26-03_00.raw  cartesia_audio_2025-10-06T15_39_36-03_00.raw  cartesia_audio_2025-10-06T15_39_57-03_00.raw  cartesia_audio_2025-10-06T15_41_17-03_00.raw  certo.raw  ok.raw  sei.raw  ta.raw
backend/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/docs/: CORRELATION_REPORT.md
backend/src/: __init__.py
backend/src/control_plane/: __init__.py  app.py  config.py
backend/src/control_plane/api/: __init__.py
backend/src/control_plane/api/routers/: agents.py  auth.py  calls.py  campaigns.py  dashboard.py  establishments.py  ingest.py  integrations.py  leads.py  rag.py  reports.py  runtimes.py  users.py  webhooks.py
backend/src/control_plane/auth/: deps.py  jwt.py
backend/src/control_plane/db/: session.py
backend/src/control_plane/db/models/: __init__.py  agent.py  base.py  call.py  campaign.py  establishment.py  integration.py  lead.py  runtime.py  user.py
backend/src/control_plane/events/: __init__.py  broker.py  sse.py
backend/src/control_plane/migrations/: env.py
backend/src/control_plane/migrations/versions/: .gitkeep
backend/src/control_plane/schemas/: __init__.py  agent.py  auth.py  call.py  campaign.py  common.py  establishment.py  ingest.py  integration.py  lead.py  rag.py  report.py  runtime.py
backend/src/control_plane/services/: call_service.py  campaign_service.py  integration_service.py  runtime_manager.py  sentiment_service.py  summary_service.py  twilio_router.py
backend/src/control_plane/workers/: __init__.py  worker.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_events.py  test_schemas.py
dashboard/: README.md
dashboard/backend/: __init__.py  main.py  requirements.txt
dashboard/certs/: cert.pem  key.pem
dashboard/frontend/: vite.config.ts
database/: schema.sql
database/migrations/: 20260107_add_calendar_connections.sql  20260113_add_kb_chunks.sql  20260113_fix_vector_search_types.sql  20260113_halfvec_4000.sql  20260113_update_vector_dimensions.sql  20260114_rag2_schema.sql  apply_calendar_migration.py
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  ENHANCEMENT_GUIDE.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_REPORT.md  RAG_SYSTEM_GUIDE.md  SYSTEM_ARCHITECTURE_WALKTHROUGH.md  project_master_guide.md
docs/RAG2.0/: Arquitetura RAG Triplo-Híbrida Multimodal_ Especificação Técnica 2026.md  COMPLETION_REPORT.md  PHASE1_PUPPYGRAPH_DEPLOY.md  PHASE2_WALKTHROUGH.md  PHASE3_ROBUSTNESS.md  PHASE4_INTEGRATION.md  PHASE5_WALKTHROUGH.md  READINESS_ASSESSMENT.md
docs/architecture/: CALLER_PHONE_FLOW.md  CONVERSATION_EXAMPLES.md  CRM_CALL_FLOW_EXAMPLE.md  README.md
docs/artifacts/: CALL_STARTUP_LATENCY_ANALYSIS.md  CUSTOMER_PREFETCH_FEATURE.md  POST_CALL_PROCESSING.md  TOOLS_INVENTORY_REPORT.md
docs/benchmarks/: baseline.json  e2e_medium.json  e2e_vllm.json  e2e_vllm_corrected.json  phase1_chunking.json  phase2_embedding.json  phase3_db.json  phase4_5_cache_pipeline.json
docs/diagrams/: ARCHITECTURE_DIAGRAMS.md
docs/guides/: Interrupt_Optimization_Guide.md  MONITORING_SETUP.md  README.md  SUPABASE_SETUP_GUIDE.md  TTS_PRONUNCIATION_GUIDE.md  gpt5_guide.md
docs/legacy-implementation/: COMPLETION_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE0_COMPATIBILITY_NOTE.md  PHASE1_WALKTHROUGH.md  PHASE2_MODULE_VALIDATION.md  PHASE3_WALKTHROUGH.md  PHASE4_WALKTHROUGH.md  PHASE5_POLISH.md  README.md  Triple-Hybrid-RAG.docx.md  (+1 more)
examples/: basic_usage.py
frontend/: BACKEND_LAYER_MVP_PRD.md
prompts/: PROMPT.md  PROMPT_v3.md  VOICEMAIL_PROMPT.md
scripts/: backfill_kb_chunks.py  backfill_rag2.py  benchmark.py  check_openai_models.py  check_twilio_status.py  dashboard_test.py  debug_stt_connection.py  e2e_benchmark.py  full_pipeline_test.py  ingest_kb.py  ingest_rag2.py  make_call.py  manual_token_harness.py  multimodal_pipeline_test.py  pipecat_chat.py  retrieval_validation_test.py  run_all_pipecat_tests.sh  run_chat.sh  run_harness.py  run_local.py  setup_ngrok.py  test_rag2.py  test_rag_e2e.py  test_rag_real_docs.py  test_tools.py
tests/: conftest.py  test_chunker.py  test_crm_customer.py  test_email.py  test_embedder.py  test_embedding_cache.py  test_entity_extractor.py  test_evaluation_framework.py  test_evolution_client.py  test_fusion.py  test_google_calendar.py  test_ingestion_db_retry.py  test_ingestion_retries.py  test_jina_e2e.py  test_jina_embedder.py  test_jina_reranker.py  test_ocr_mode.py  test_ocr_mode_e2e.py  test_ocr_processor.py  test_p1_enhancements.py  test_p2_enhancements.py  test_p3_enhancements.py  test_p4_pipeline.py  test_p5_advanced_rag.py  test_p6_multimodal_agentic.py  test_pipecat_integration.py  test_pipecat_module.py  test_post_rerank_safety.py  test_query_planner.py  test_rag2_chunker.py  test_rag2_e2e.py  test_rag2_embedder.py  test_rag2_entity_e2e.py  test_rag2_graph_e2e.py  test_rag2_ingest.py  test_rag2_integration.py  test_rag2_ocr_gundam.py  test_rag2_retrieval.py  test_rag2_tool_connection.py  test_rag2_triple_hybrid.py  (+12 more)
tool_tests/: __init__.py  logger.py  run_tool_tests.py  tool_validator.py
triple-hybrid-rag/: README.md
(+260 files in other folders)
