[project]
name = "triple-hybrid-rag"
version = "1.0.0"
description = "Triple-Hybrid RAG System: Lexical + Semantic + Graph retrieval with multimodal embeddings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Triple-Hybrid-RAG Team"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "vector-search",
    "knowledge-graph",
    "multimodal",
    "embeddings",
    "puppygraph",
    "postgresql",
    "pgvector",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.0",
    # Database
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    # HTTP/API
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "openai>=1.40.0",
    "tenacity>=9.0.0",
    # Vector operations
    "numpy>=1.26.0",
    # Document loading
    "PyMuPDF>=1.24.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    # Tokenization
    "tiktoken>=0.7.0",
    # Graph (PuppyGraph Bolt/Cypher)
    "neo4j>=5.20.0",
    # Observability (optional)
    "prometheus-client>=0.20.0",
    # Rich TUI
    "rich>=13.0.0",
    "uvicorn>=0.40.0",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
# Local ML models for reranking
ml = [
    "sentence-transformers>=2.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
]

# OCR support (Tesseract fallback)
ocr = [
    "pytesseract>=0.3.10",
]

# Full installation (all features)
full = [
    "triple-hybrid-rag[ml,ocr]",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
thr = "triple_hybrid_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triple_hybrid_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
