[project]
name = "control-plane"
version = "0.1.0"
description = "Control-plane backend for multi-tenant SaaS voice agent platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "docker>=7.0.0",
    "redis>=5.0.1",
    "twilio>=8.10.0",
    "boto3>=1.34.0",
    "supabase>=2.3.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

rag = [
    # Document processing
    "PyMuPDF>=1.24.0",       # PDF loading (fitz)
    "pypdf>=4.0.0",          # PDF fallback
    "python-docx>=1.1.0",    # DOCX loading
    "openpyxl>=3.1.0",       # XLSX loading
    # ML models
    "sentence-transformers>=3.0.0",  # Cross-encoder reranking
    "sentencepiece>=0.2.0",  # Required for SigLIP tokenizer
    "torch>=2.0.0",          # PyTorch for embeddings
    "transformers>=4.40.0",  # SigLIP image embeddings
    # Utilities
    "numpy>=1.26.0",         # Vector operations
    "Pillow>=10.0.0",        # Image processing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["control_plane"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
